Name:                network-transport-pipes
Version:             0.0.2.1
-- Version History:
-- 0.0.2.1  - Compatibility with network-transport 0.3.0.1
-- 0.0.1.1  - Initial

Description:         Named Pipes backend for network-transport interface.
License:             BSD3
License-file:        LICENSE
Author:              Abhishek Kulkarni, Ryan Newton
Maintainer:          adkulkar@indiana.edu
Homepage:            http://github.com/haskell-distributed/
Build-Type:          Simple
Cabal-Version:       >=1.8
Tested-With:         GHC==7.6.3

Library
  Build-Depends:     base >= 3 && < 5,
                     binary >= 0.5.1.1,
                     bytestring >= 0.9,
                     network-transport >= 0.3.0.1,
                     containers >= 0.4,
                     unix >= 2.5.0.0, 
                     random, 
                     directory,
                     unix-bytestring >= 0.3.5.3
  Exposed-modules:   Network.Transport.Pipes
--  Extensions:        BangPatterns
  ghc-options:       -Wall -threaded
  HS-Source-Dirs:    src

Test-Suite TestPipes
  Type:            exitcode-stdio-1.0
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport-pipes >= 0.0.2.1,
                   network-transport-tests >= 0.1 && < 0.2
  Main-Is:         TestPipes.hs
  ghc-options:     -Wall -fno-warn-unused-do-bind -threaded
  HS-Source-Dirs:  tests
